--- a/calculator/index.html
+++ b/calculator/index.html
@@ -1,1 +1,61 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Calculator</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="main">
+      <div class="table">
+        <div class="input">
+          <p class="msg1"></p>
+        </div>
+        <div class="input">
+          <h1 class="msg2"></h1>
+        </div>
 
+        <div class="row symbol">
+          <button id="clean">C</button>
+          <button id="power" value="**">^</button>
+          <button id="modal">%</button>
+          <button id="div">/</button>
+        </div>
+
+        <div class="numsSyms">
+          <div class="numbers">
+            <div class="row num">
+              <button id="seven">7</button>
+              <button id="eight">8</button>
+              <button id="nine">9</button>
+            </div>
+            <div class="row num">
+              <button id="four">4</button>
+              <button id="five">5</button>
+              <button id="six">6</button>
+            </div>
+            <div class="row num">
+              <button id="one">1</button>
+              <button id="two">2</button>
+              <button id="three">3</button>
+            </div>
+            <div class="row num">
+              <button id="zero">0</button>
+              <button id="doubleZero">00</button>
+              <button id="dot">.</button>
+            </div>
+          </div>
+
+          <div class="symbols symbol">
+            <button id="mult">*</button>
+            <button id="sub">-</button>
+            <button id="add">+</button>
+            <button id="equal">=</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="script.js"></script>
+  </body>
+</html>
