--- a/tapMusic/index.html
+++ b/tapMusic/index.html
@@ -1,1 +1,41 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tap Music</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="app">
+      <header>
+        <h1>Tap Music</h1>
+        <p>Make music with only one click</p>
+      </header>
+      <div class="visual"></div>
+      <div class="pads">
+        <div class="pad1">
+          <audio
+            src="newpunjabisongs2020kalejelibaasdikakaofficialvideoginnikapoorlatestpunjabi2-52188.mp3"
+          ></audio>
+        </div>
+        <div class="pad2">
+          <audio src="x7-message-tone-wapking-cc-7335-12411-52495.mp3"></audio>
+        </div>
+        <div class="pad3">
+          <audio src="success-level-52186.mp3"></audio>
+        </div>
+        <div class="pad4">
+          <audio src="hangouts-incoming-call-20912-51930.mp3"></audio>
+        </div>
+        <div class="pad5">
+          <audio src="standard-recording-7-51863.mp3"></audio>
+        </div>
+        <div class="pad6">
+          <audio src="win-level-51754.mp3"></audio>
+        </div>
+      </div>
+    </div>
+    <script src="script.js"></script>
+  </body>
+</html>
